--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -21,7 +21,12 @@ http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
-
+    <resource-ref>
+        <description>Connection Pool</description>
+        <res-ref-name>jdbc/LocalTestDB</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
     <servlet-mapping>
         <servlet-name>resteasy-servlet</servlet-name>
         <url-pattern>/*</url-pattern>
